Commander serve files through http
